2010-03-04  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: in function "getAgentMap" change the controls
	delete overview and change PanZoom for PanZoomBar because the overview
	fail with google map, and PanZoomBar now the map view is more tall.
	
	* operation/gis_maps/render_view.php: delete overview because the overview
	fail with google.

2010-03-04  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: in function "get_user_groups" add third
	parameter $returnAllGroup by true for default. Fix in the function
	"get_group_agents" now if pass the id_group as 0 or 1 (all group) search
	for all groups.
	
	* godmode/agentes/agent_manager.php: use the new parameter for function
	"get_user_groups" for don't show the all group.

2010-03-04  Sancho Lerena <slerena@gmail.com>

	* pandoradb_data.sql: Added news, default timezone and other
	minor changes. GIS is disabled by default now.

	* include/config_process.php: Force a timezone if not defined.

	* operation/gis_maps/index.php,
        operation/agentes/gis_view.php: Config.php and header stuff

	* operation/servers/view_server_detail.php
	operation/menu.php: Recon operation detail is now shown in the left
	menu.

	* admin_access_logs.php,
	db/db_audit.php
	db/db_info.php
        db/db_event.php
        agentes/configurar_agente.php
        gis_maps/configure_gis_map.php
        gis_maps/index.php: More headers and config.php include stuff.

2010-03-04  Raúl Mateos <raulofpandora@gmail.com>

	* (lot of files): Updated year and headers.

2010-03-04  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: clean the form, now don't show
	the box of preview map.

2010-03-04  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: add comment include for javascript include
	for more to easy change version openlayers for test.
	
	* include/javascript/OpenLayers/OpenLayers.js: warning the source code is